<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/student_details"
                android:textSize="34sp"
                android:textStyle="bold"
                android:visibility="visible"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"/>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="7dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="7dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="50dp"
                    android:layout_marginBottom="20dp">

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="@string/enter_rollno"
                        android:textSize="24sp" />

                    <EditText
                        android:id="@+id/rollno"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:textSize="20sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="50dp"
                    android:layout_marginBottom="20dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/enter_name"
                        android:textSize="24sp" />

                    <EditText
                        android:id="@+id/name"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:textSize="20sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="50dp"
                    android:layout_marginBottom="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/enter_marks"
                        android:textSize="24sp" />

                    <EditText
                        android:id="@+id/marks"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:textSize="20sp" />
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="30dp">

                    <Button
                        android:id="@+id/insert"
                        android:layout_width="191dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="5dp"
                        android:text="@string/insert" />

                    <Button
                        android:id="@+id/update"
                        android:layout_width="195dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="5dp"
                        android:text="@string/update" />
                </TableRow>

                <TableRow
                    android:layout_width="268dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="30dp">

                    <Button
                        android:id="@+id/delete"
                        android:layout_width="163dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginEnd="5dp"
                        android:text="@string/delete" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal">

                    <Button
                        android:id="@+id/view"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:text="@string/view" />

                    <Button
                        android:id="@+id/viewall"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:text="@string/view_all" />
                </TableRow>

            </TableLayout>

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>